# Implement-Uplink-Encryption-and-Framing

./: CMakeLists.txt  README.md  readme
include/: Crypto.h  FrameCounter.h  LoRaPayload.h
src/: Crypto.cpp  FrameCounter.cpp  LoRaPayload.cpp
tests/: test_crypto.cpp
